--- a/src/pages/Home/Slide/Slide.module.scss
+++ b/src/pages/Home/Slide/Slide.module.scss
@@ -1,6 +1,11 @@
 .wrapper {
-    background: url('http://thaoduochuongque.com/thumbs/1366x435x1/upload/photo/slide-20610.png') top center / cover
-        no-repeat;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+}
+.slider {
+    background: url('') top center / cover no-repeat;
     padding-top: 40%;
     width: 100%;
 }
