--- a/src/pages/Home/Slide/Slide.module.scss
+++ b/src/pages/Home/Slide/Slide.module.scss
@@ -23,7 +23,7 @@
     }
 }
 .slider {
-    background: url('') top center / contain no-repeat;
+    background: url('') top center / cover no-repeat;
     padding-top: 40%;
     width: 100%;
     flex-shrink: 0;
