--- a/src/pages/Home/NewProducts/NewProducts.module.scss
+++ b/src/pages/Home/NewProducts/NewProducts.module.scss
@@ -14,12 +14,18 @@
 }
 .product-list {
     display: flex;
-    // flex-shrink: 0;
+    flex-shrink: 0;
     overflow: hidden;
     margin: 0 -8px;
     
 }
 .product {
-    width: 300px;
+    width: 25vw;
     padding: 0 8px;
+
+    img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
 }
