--- a/src/components/GlobalStyles/GlobalStyles.scss
+++ b/src/components/GlobalStyles/GlobalStyles.scss
@@ -48,3 +48,29 @@ button {
     src: url('/assets/fonts/svn-gilroy_semibold.ttf');
     font-weight: 500;
 }
+
+// custom slick-slide
+.slick-slide > div {
+    margin: 0 8px;
+}
+.slick-list {
+    margin: 0 -8px;
+}
+
+body .slick-prev::before,
+body .slick-next::before {
+    color: rgb(53, 53, 53);
+    font-size: 2.9rem;
+}
+body .slick-prev,
+body .slick-next {
+    z-index: 10;
+    width: 29px;
+    height: 29px;
+}
+body .slick-prev {
+    left: 0;
+}
+body .slick-next {
+    right: 0;
+}
