--- a/src/pages/Home/Products/Product/Product.module.scss
+++ b/src/pages/Home/Products/Product/Product.module.scss
@@ -1,8 +1,40 @@
 .wrapper {
     border: 1px solid #e9ecef;
-    border-radius: 20px;
+    border-radius: 10px;
     overflow: hidden;
     padding: 20px;
+
+    .product-image {
+        position: relative;
+
+        .product-tag {
+            display: flex;
+            flex-direction: column;
+            position: absolute;
+            top: -10px;
+            left: -20px;
+
+            & > div {
+                background: var(--primary);
+                border-radius: 0 5px 5px 0;
+                color: #fff;
+                font-size: 13.5px;
+                font-weight: 500;
+                padding: 2px 15px;
+            }
+            & > div:not(:first-child) {
+                margin-top: 5px;
+            }
+
+            .tag-sale {
+                background: #f36d1f;
+                width: 56px;
+            }
+            .tag-new {
+                width: 56px;
+            }
+        }
+    }
 
     img {
         width: 100%;
@@ -20,10 +52,22 @@
         }
 
         .price {
+            display: flex;
+            align-items: baseline;
+        }
+
+        .price-now {
             color: #d35400;
             font-size: 20px;
             font-weight: 700;
             letter-spacing: 1px;
+        }
+
+        .price-old {
+            color: #789;
+            font-size: 15px;
+            margin-left: 15px;
+            text-decoration: line-through;
         }
     }
 
