--- a/src/pages/Home/Slide/Slide.module.scss
+++ b/src/pages/Home/Slide/Slide.module.scss
@@ -5,6 +5,8 @@
     position: relative;
     overflow-x: hidden;
 
+    margin-top: var(--top-header-height);
+
     .icon-left, .icon-right {
         position: absolute;
         top: 50%;
