--- a/src/components/Layouts/components/Header/Header.module.scss
+++ b/src/components/Layouts/components/Header/Header.module.scss
@@ -6,11 +6,12 @@
 
     position: fixed;
     z-index: 11;
+    top: 0;
     width: 100%;
 }
 
 .top-sale {
-    background-color: rgba(136, 83, 5, 0.8);
+    background-color: #db9e43;
     text-align: center;
     color: #fff;
     font-size: 1.2rem;
