--- a/src/pages/Home/Slide/Slide.module.scss
+++ b/src/pages/Home/Slide/Slide.module.scss
@@ -5,7 +5,7 @@
     position: relative;
     overflow-x: hidden;
 
-    margin-top: var(--top-header-height);
+    margin-top: 168px;
 
     .icon-left, .icon-right {
         position: absolute;
